--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,7 @@
                 <tr>
                     <th>Customer Name</th>
                     <th>Address</th>
+                    <th>Estimate Time</th>
                     <th>Current Status</th>
                     <th>Update Status</th>
                 </tr>
@@ -41,6 +42,7 @@
                 <tr>
                     <td>{{ order['customer_name'] }}</td>
                     <td>{{ order['customer_address'] }}</td>
+                    <td>{{ order['estimated_delivery'] }}</td>
                     <td class="current-status">{{ order['status'] }}</td>
                     <td>
                         <form action="{{ url_for('update_order_status') }}" method="post" class="status-form">
